--- a/src/update2/org/cict/layout/academicprogram/program-row.fxml
+++ b/src/update2/org/cict/layout/academicprogram/program-row.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="100.0" spacing="20.0" style="-fx-border-color: #fff;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="100.0" spacing="20.0" style="-fx-background-color: #E85764;" styleClass="metro-row" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView accessibleText="img_row_extension" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,7 +18,7 @@
             <Insets />
          </HBox.margin>
       </ImageView>
-      <Label accessibleText="lbl_code" minWidth="-Infinity" prefWidth="200.0" text="BSIT" textAlignment="CENTER">
+      <Label accessibleText="lbl_code" minWidth="-Infinity" prefWidth="200.0" text="BSIT" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="35.0" />
          </font>
@@ -26,16 +26,16 @@
             <Insets />
          </HBox.margin>
       </Label>
-      <Label accessibleText="lbl_name" maxWidth="1.7976931348623157E308" text="BS INFORMATION TECHNOLOGY" HBox.hgrow="ALWAYS">
+      <Label accessibleText="lbl_name" maxWidth="1.7976931348623157E308" text="BS INFORMATION TECHNOLOGY" textFill="WHITE" HBox.hgrow="ALWAYS">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Curriculums">
+      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Curriculums" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/Graduation%20Cap_64px.png" />
+                  <Image url="@../subjects/img/Graduation%20Cap_96px.png" />
                </image>
             </ImageView>
          </graphic>
@@ -43,12 +43,12 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Label accessibleText="lbl_count" minWidth="-Infinity" prefWidth="70.0" text="12">
+      <Label accessibleText="lbl_count" minWidth="-Infinity" prefWidth="70.0" text="12" textFill="WHITE">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <JFXButton accessibleText="btn_information" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #059E4B;" text="SAVE" textFill="WHITE">
+      <JFXButton accessibleText="btn_information" prefHeight="47.0" prefWidth="117.0" style="-fx-border-color: #fff;" text="SAVE" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
