--- a/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
+++ b/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="application_root" prefHeight="700.0" prefWidth="1200.0" stylesheets="@academic-program-home.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="application_root" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #E85764;" stylesheets="@academic-program-home.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane id="header-panel" layoutX="117.0" layoutY="44.0" prefHeight="67.0" prefWidth="1024.0" style="-fx-background-color: #2980B9;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="117.0" layoutY="44.0" prefHeight="67.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" text="Academic Programs" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
@@ -32,9 +32,9 @@
                      </HBox.margin>
                   </Label>
                   <ComboBox fx:id="cmb_sort_" accessibleText="cmb_sort" opacity="0.86" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: #95A5A6; -fx-border-radius: 5; -fx-text-fill: #2980B9;" />
-                  <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Home" textFill="WHITE">
+                  <JFXButton fx:id="btn_home" graphicTextGap="10.0" maxWidth="150.0" minWidth="150.0" prefHeight="39.0" prefWidth="150.0" style="-fx-border-color: #fff;" text="Home" textFill="WHITE">
                      <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../../../res/img/Dog%20House_52px.png" />
                            </image>
@@ -46,21 +46,24 @@
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
                   </JFXButton>
                </children>
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="75.0">
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="69.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="75.0">
          <children>
-            <VBox fx:id="vbox_table_holder" prefHeight="700.0" prefWidth="1303.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
-            <VBox fx:id="vbox_search" layoutY="100.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="206.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="200.0">
+            <VBox fx:id="vbox_table_holder" prefHeight="700.0" prefWidth="1303.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
+            <VBox fx:id="vbox_search" layoutY="100.0" AnchorPane.bottomAnchor="206.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="200.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="150.0" prefWidth="1303.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="108.0" fitWidth="714.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../res/gif/firefox.gif" />
+                              <Image url="@../../../../../res/gif/initloading.gif" />
                            </image>
                            <HBox.margin>
                               <Insets right="20.0" />
@@ -68,13 +71,13 @@
                         </ImageView>
                         <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="517.0">
                            <children>
-                              <Label text="Please wait a moment ..." wrapText="true">
+                              <Label text="Please wait a moment ..." textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="28.0" />
                                  </font>
                               </Label>
-                              <Line endX="340.0" startX="-100.0" />
-                              <Label text="Loading all the academic programs and their curriculums." textAlignment="JUSTIFY" wrapText="true">
+                              <Line endX="340.0" startX="-100.0" stroke="WHITE" />
+                              <Label text="Loading all the academic programs and their curriculums." textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
@@ -88,13 +91,13 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox fx:id="vbox_no_found" layoutX="10.0" layoutY="210.0" style="-fx-background-color: #fff;" visible="false">
+            <VBox fx:id="vbox_no_found" layoutX="10.0" layoutY="210.0" prefHeight="182.0" prefWidth="1303.0" visible="false" AnchorPane.bottomAnchor="308.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="-113.0" AnchorPane.topAnchor="210.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="150.0" prefWidth="1303.0" VBox.vgrow="ALWAYS">
                      <children>
                         <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@images/No_50px.png" />
+                              <Image url="@images/Cancel_96px.png" />
                            </image>
                            <HBox.margin>
                               <Insets right="20.0" />
@@ -102,13 +105,13 @@
                         </ImageView>
                         <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="517.0">
                            <children>
-                              <Label text="No Academic Program Found" wrapText="true">
+                              <Label text="No Academic Program Found" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="28.0" />
                                  </font>
                               </Label>
-                              <Line endX="340.0" startX="-100.0" />
-                              <Label text="Note: The result shown are sorted to saved and not saved programs." textAlignment="JUSTIFY" wrapText="true">
+                              <Line endX="340.0" startX="-100.0" stroke="WHITE" />
+                              <Label text="Note: The result shown are sorted to saved and not saved programs." textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
@@ -124,7 +127,7 @@
             </VBox>
          </children>
       </AnchorPane>
-      <JFXButton fx:id="btnNewProgram" layoutX="1058.0" layoutY="661.0" prefHeight="51.0" prefWidth="238.0" style="-fx-background-color: #5CB85C;" text="New Program" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+      <JFXButton fx:id="btnNewProgram" layoutX="1058.0" layoutY="661.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="New Program" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -136,7 +139,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btn_view_subjects" layoutX="690.0" layoutY="635.0" prefHeight="51.0" prefWidth="238.0" style="-fx-background-color: #3498DB;" text="View Subjects" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="280.0">
+      <JFXButton fx:id="btn_view_subjects" layoutX="690.0" layoutY="635.0" prefHeight="51.0" prefWidth="238.0" style="-fx-border-color: #fff;" text="View Subjects" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="280.0">
          <font>
             <Font size="20.0" />
          </font>
