--- a/src/update2/org/cict/layout/academicprogram/curriculum-row.fxml
+++ b/src/update2/org/cict/layout/academicprogram/curriculum-row.fxml
@@ -9,31 +9,31 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="1000.0" spacing="10.0" style="-fx-border-color: #2B89E0;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="70.0" prefHeight="70.0" prefWidth="1000.0" spacing="10.0" style="-fx-background-color: #E85764;" styleClass="metro-row" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Major">
+      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Major" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/major.png" />
+                  <Image url="@../subjects/img/type.png" />
                </image>
             </ImageView>
          </graphic>
       </Label>
-      <Label accessibleText="lbl_major" text="Graphics Design">
+      <Label accessibleText="lbl_major" text="Graphics Design" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Label accessibleText="lbl_name" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="216.0" text="BSIT REVISED MAJOR IN GRAPHICS(16-17)" HBox.hgrow="ALWAYS">
+      <Label accessibleText="lbl_name" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="216.0" text="BSIT REVISED MAJOR IN GRAPHICS(16-17)" textFill="WHITE" HBox.hgrow="ALWAYS">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Ladderized">
+      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Ladderized" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -42,12 +42,12 @@
             </ImageView>
          </graphic>
       </Label>
-      <Label accessibleText="lbl_ladderized" prefHeight="40.0" prefWidth="47.0" text="Yes">
+      <Label accessibleText="lbl_ladderized" prefHeight="40.0" prefWidth="47.0" text="Yes" textFill="WHITE">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Years">
+      <Label contentDisplay="TOP" graphicTextGap="0.0" text="Years" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -56,19 +56,19 @@
             </ImageView>
          </graphic>
       </Label>
-      <Label accessibleText="lbl_years" prefWidth="30.0" text="4">
+      <Label accessibleText="lbl_years" prefWidth="30.0" text="4" textFill="WHITE">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <JFXButton accessibleText="btn_details" style="-fx-background-color: #2B89E0;" text="Details" textFill="WHITE">
+      <JFXButton accessibleText="btn_details" style="-fx-border-color: #fff;" text="Details" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </JFXButton>
-      <VBox accessibleText="btn_deleteCurriculum" alignment="CENTER" style="-fx-background-color: #D14134; -fx-border-color: #D14134;">
+      <VBox accessibleText="btn_deleteCurriculum" alignment="CENTER" prefHeight="51.0" prefWidth="34.0" style="-fx-border-color: #fff; -fx-border-width: 2;">
          <children>
-            <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="37.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/delete96px.png" />
                </image>
