--- a/src/update2/org/cict/layout/curriculum/row-subject.fxml
+++ b/src/update2/org/cict/layout/curriculum/row-subject.fxml
@@ -9,21 +9,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="70.0" prefWidth="837.0" spacing="10.0" style="-fx-border-color: #2B89E0;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="70.0" prefWidth="837.0" spacing="10.0" style="-fx-background-color: #E85764;" styleClass="metro-row" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
          <image>
-            <Image url="@img/subject.png" />
+            <Image url="@../subjects/img/subject.png" />
          </image>
       </ImageView>
       <VBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="68.0" prefWidth="430.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label accessibleText="subject_code" text="SOCSCI 223">
+            <Label accessibleText="subject_code" text="SOCSCI 223" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
             </Label>
-            <Label accessibleText="descriptive_title" text="POLITCAL SCIENCE WITH PHILIPPINE CONSTITUTION">
+            <Label accessibleText="descriptive_title" text="POLITCAL SCIENCE WITH PHILIPPINE CONSTITUTION" textFill="WHITE">
                <font>
                   <Font size="13.0" />
                </font>
@@ -32,16 +32,16 @@
       </VBox>
       <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lec">
+            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lec" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@img/lec.png" />
+                        <Image url="@../subjects/img/lec.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Label>
-            <Label accessibleText="lec" text="2.0">
+            <Label accessibleText="lec" minWidth="-Infinity" prefWidth="40.0" text="1.0" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -50,16 +50,16 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lab">
+            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lab" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@img/lab.png" />
+                        <Image url="@../subjects/img/lab.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Label>
-            <Label accessibleText="lab" text="1.0">
+            <Label accessibleText="lab" minWidth="-Infinity" prefWidth="40.0" text="1.0" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -68,7 +68,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="68.0" prefWidth="104.0" spacing="10.0" HBox.hgrow="ALWAYS">
          <children>
-            <Button accessibleText="btn_more_info" mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" style="-fx-background-color: #337AB7;" textFill="WHITE">
+            <Button accessibleText="btn_more_info" mnemonicParsing="false" prefHeight="31.0" prefWidth="40.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
@@ -80,7 +80,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button accessibleText="btn_remove" mnemonicParsing="false" style="-fx-background-color: #DB4437;" textFill="WHITE">
+            <Button accessibleText="btn_remove" mnemonicParsing="false" style="-fx-background-color: #E85764; -fx-border-color: #fff;" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
