--- a/src/update2/org/cict/layout/curriculum/subject-extension.fxml
+++ b/src/update2/org/cict/layout/curriculum/subject-extension.fxml
@@ -7,21 +7,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="590.0" style="-fx-background-color: #E85764;" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox accessibleText="vbox_subjects" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="400.0" prefWidth="842.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets left="65.0" />
          </VBox.margin>
          <children>
-            <Label accessibleText="lbl_no_found" text="No Subject Found" textFill="#03a1e9">
+            <Label accessibleText="lbl_no_found" text="No Subject Found" textFill="WHITE">
                <font>
                   <Font size="27.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="58.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@img/subject.png" />
+                        <Image url="@../subjects/img/subject.png" />
                      </image>
                   </ImageView>
                </graphic>
