--- a/src/update2/org/cict/layout/subjects/row-subject.fxml
+++ b/src/update2/org/cict/layout/subjects/row-subject.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="70.0" prefWidth="1148.0" spacing="10.0" style="-fx-border-color: #16A085; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="70.0" prefWidth="1148.0" spacing="10.0" style="-fx-background-color: #E85764;" styleClass="metro-row" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -94,10 +95,7 @@
       </Label>
       <HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0">
          <children>
-            <Button accessibleText="btn_more_info" mnemonicParsing="false" style="-fx-background-color: #337AB7;" textFill="WHITE">
-               <font>
-                  <Font size="20.0" />
-               </font>
+            <JFXButton accessibleText="btn_more_info" contentDisplay="CENTER" prefHeight="38.0" prefWidth="38.0" style="-fx-border-color: #fff;" textAlignment="CENTER">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -105,11 +103,11 @@
                      </image>
                   </ImageView>
                </graphic>
-            </Button>
-            <Button accessibleText="btn_remove" mnemonicParsing="false" style="-fx-background-color: #DB4437;" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font size="1.0" />
                </font>
+            </JFXButton>
+            <JFXButton accessibleText="btn_remove" contentDisplay="CENTER" prefHeight="38.0" prefWidth="38.0" style="-fx-border-color: #fff;" text=" " textAlignment="CENTER">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -117,11 +115,18 @@
                      </image>
                   </ImageView>
                </graphic>
-            </Button>
+               <font>
+                  <Font size="1.0" />
+               </font>
+            </JFXButton>
          </children>
       </HBox>
    </children>
    <padding>
       <Insets left="20.0" right="20.0" />
    </padding>
+   <stylesheets>
+      <URL value="@../../../../../update3/org/cict/layout/sectionmain/metro-ui.css" />
+      <URL value="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" />
+   </stylesheets>
 </HBox>
