--- a/src/update2/org/cict/layout/subjects/search-subject-row.fxml
+++ b/src/update2/org/cict/layout/subjects/search-subject-row.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="70.0" prefWidth="945.0" spacing="10.0" style="-fx-border-color: #56CFAA; -fx-border-width: 1;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="70.0" minWidth="70.0" prefHeight="70.0" prefWidth="945.0" spacing="10.0" style="-fx-background-color: #E85764;" styleClass="metro-row" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,17 +18,17 @@
       </ImageView>
       <VBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="273.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label accessibleText="subject_code" text="SOCSCI 223">
+            <Label accessibleText="subject_code" text="SOCSCI 223" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
             </Label>
-            <Label accessibleText="descriptive_title" text="POLITCAL SCIENCE WITH PHILIPPINE CONSTITUTION" />
+            <Label accessibleText="descriptive_title" text="POLITCAL SCIENCE WITH PHILIPPINE CONSTITUTION" textFill="WHITE" />
          </children>
       </VBox>
       <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
-            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lec">
+            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lec" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -37,7 +37,7 @@
                   </ImageView>
                </graphic>
             </Label>
-            <Label accessibleText="lec" text="2.0">
+            <Label accessibleText="lec" text="2.0" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -46,7 +46,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
-            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lab">
+            <Label contentDisplay="TOP" graphicTextGap="0.0" text="Lab" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -55,14 +55,14 @@
                   </ImageView>
                </graphic>
             </Label>
-            <Label accessibleText="lab" text="1.0">
+            <Label accessibleText="lab" text="1.0" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <Label accessibleText="subtype" prefHeight="30.0" prefWidth="123.0" text="Programming">
+      <Label accessibleText="subtype" prefHeight="30.0" prefWidth="123.0" text="Programming" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -77,7 +77,7 @@
             <Insets left="10.0" />
          </padding>
       </Label>
-      <Label accessibleText="type" prefHeight="31.0" prefWidth="138.0" text="INTERNSHIP">
+      <Label accessibleText="type" prefHeight="31.0" prefWidth="138.0" text="INTERNSHIP" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -89,7 +89,7 @@
             </ImageView>
          </graphic>
       </Label>
-      <Button accessibleText="btn_select" mnemonicParsing="false" style="-fx-background-color: #56CFAA;" text="Select" textFill="WHITE">
+      <Button accessibleText="btn_select" mnemonicParsing="false" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Select" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
