--- a/src/update2/org/cict/layout/subjects/search-subject.fxml
+++ b/src/update2/org/cict/layout/subjects/search-subject.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="67.0" prefWidth="1024.0" style="-fx-background-color: #2B89E0; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="67.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" style="-fx-text-fill: #FFFFFF;" text="Find Subject">
                <font>
@@ -35,6 +35,18 @@
                   <Font size="15.0" />
                </font>
             </Label>
+            <JFXButton fx:id="btn_done" alignment="CENTER" graphicTextGap="10.0" layoutX="848.0" layoutY="14.0" prefHeight="19.0" prefWidth="128.0" style="-fx-text-fill: #FFFFFF; -fx-border-color: #fff;" text="Done" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="14.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/Checkmark_32px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
          </children>
       </AnchorPane>
       <HBox alignment="CENTER_LEFT" layoutY="110.0" prefHeight="67.0" prefWidth="980.0" spacing="10.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
@@ -49,7 +61,7 @@
                   <Font size="16.0" />
                </font>
             </TextField>
-            <JFXButton fx:id="btnSearch" alignment="CENTER" graphicTextGap="10.0" prefHeight="19.0" prefWidth="128.0" style="-fx-background-color: #27AE60; -fx-text-fill: #FFFFFF;" text="Search">
+            <JFXButton fx:id="btnSearch" alignment="CENTER" graphicTextGap="10.0" prefHeight="19.0" prefWidth="128.0" style="-fx-text-fill: #FFFFFF; -fx-border-color: #fff;" text="Search">
                <font>
                   <Font size="16.0" />
                </font>
@@ -61,7 +73,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="btnAddnew" alignment="CENTER" graphicTextGap="10.0" layoutX="473.0" layoutY="37.0" prefHeight="19.0" prefWidth="128.0" style="-fx-background-color: #27AE60; -fx-text-fill: #FFFFFF;" text="Add New">
+            <JFXButton fx:id="btnAddnew" alignment="CENTER" graphicTextGap="10.0" layoutX="473.0" layoutY="37.0" prefHeight="19.0" prefWidth="128.0" style="-fx-text-fill: #FFFFFF; -fx-border-color: #fff;" text="Add New">
                <font>
                   <Font size="16.0" />
                </font>
@@ -96,13 +108,13 @@
                               </ImageView>
                               <VBox alignment="CENTER_LEFT" prefHeight="128.0" prefWidth="400.0">
                                  <children>
-                                    <Label text="Let's start searching" wrapText="true">
+                                    <Label text="Let's start searching" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
                                     </Label>
-                                    <Line endX="300.0" startX="-100.0" />
-                                    <Label prefHeight="129.0" prefWidth="480.0" text="Search the subject by it's code, and we're done." wrapText="true">
+                                    <Line endX="300.0" startX="-100.0" stroke="WHITE" />
+                                    <Label prefHeight="129.0" prefWidth="480.0" text="Search the subject by it's code, and we're done." textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font size="25.0" />
                                        </font>
@@ -126,13 +138,13 @@
                               </ImageView>
                               <VBox alignment="CENTER_LEFT" prefHeight="163.0" prefWidth="357.0">
                                  <children>
-                                    <Label text="No Subject Found" wrapText="true">
+                                    <Label text="No Subject Found" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
                                     </Label>
-                                    <Line endX="250.0" startX="-100.0" />
-                                    <Label text="The subject is not existing. Do you mind to add it instead?" wrapText="true">
+                                    <Line endX="250.0" startX="-100.0" stroke="WHITE" />
+                                    <Label text="The subject is not existing. Do you mind to add it instead?" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
@@ -142,12 +154,12 @@
                                     </Label>
                                     <HBox alignment="CENTER_RIGHT" spacing="10.0">
                                        <children>
-                                          <Button fx:id="btn_add_new_subject" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #2ECC71;" text="Okay, I'll add it" textFill="WHITE">
+                                          <Button fx:id="btn_add_new_subject" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="Okay, I'll add it" textFill="WHITE">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Button>
-                                          <Button fx:id="btn_cancel" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #C0392B;" text="No, I don't" textFill="WHITE">
+                                          <Button fx:id="btn_cancel" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="No, I don't" textFill="WHITE">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
@@ -162,7 +174,7 @@
                            <children>
                               <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../../res/gif/hashgif.gif" />
+                                    <Image url="@../../../../../res/gif/initloading.gif" />
                                  </image>
                                  <HBox.margin>
                                     <Insets right="20.0" />
@@ -170,13 +182,13 @@
                               </ImageView>
                               <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="480.0">
                                  <children>
-                                    <Label text="Searching Every Corner . . ." wrapText="true">
+                                    <Label text="Searching Every Corner . . ." textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
                                     </Label>
-                                    <Line endX="340.0" startX="-100.0" />
-                                    <Label text="You can search using the subject code (e.g. &quot;IT 215&quot;). Don't worry I'm not case sensitive, Happy to help !" textAlignment="JUSTIFY" wrapText="true">
+                                    <Line endX="340.0" startX="-100.0" stroke="WHITE" />
+                                    <Label text="You can search using the subject code (e.g. &quot;IT 215&quot;). Don't worry I'm not case sensitive, Happy to help !" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
@@ -192,7 +204,7 @@
                   </AnchorPane>
                   <AnchorPane fx:id="anchor_view" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <VBox fx:id="vbox_subjects" layoutX="28.0" layoutY="14.0" prefHeight="434.0" prefWidth="951.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="14.0" />
+                        <VBox fx:id="vbox_subjects" layoutX="28.0" layoutY="14.0" prefHeight="434.0" prefWidth="951.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="14.0" />
                      </children>
                   </AnchorPane>
                </children>
