--- a/src/update2/org/cict/layout/subjects/subject-prereq.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-prereq.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,29 +13,48 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="848.0" style="-fx-background-color: #E85764;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER_LEFT" prefHeight="44.0" prefWidth="600.0" style="-fx-background-color: #2980B9;">
+      <VBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="848.0" VBox.vgrow="ALWAYS">
          <children>
             <HBox alignment="CENTER_LEFT">
                <children>
                   <Label maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="305.0" text="Subject Pre-requisites &amp; Co-Requisites" textFill="WHITE" HBox.hgrow="ALWAYS">
                      <font>
-                        <Font name="System Bold" size="22.0" />
+                        <Font name="System Bold" size="28.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </Label>
+                  <JFXButton fx:id="btn_back" style="-fx-border-color: #fff;" text="Back" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/Back%20Arrow_32px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
                </children>
                <padding>
                   <Insets left="20.0" />
                </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="5.0" right="20.0" top="10.0" />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
       <GridPane prefHeight="103.0" prefWidth="828.0" vgap="7.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="160.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="419.0" minWidth="10.0" prefWidth="22.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="738.0" minWidth="10.0" prefWidth="352.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="419.0" minWidth="0.0" prefWidth="0.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="738.0" minWidth="10.0" prefWidth="373.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="738.0" minWidth="10.0" prefWidth="116.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="679.0" minWidth="10.0" prefWidth="21.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="679.0" minWidth="10.0" prefWidth="290.0" />
         </columnConstraints>
@@ -44,7 +64,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label layoutX="20.0" layoutY="12.0" text="Subject Code" textFill="#0b4e78" GridPane.rowIndex="1">
+            <Label layoutX="20.0" layoutY="12.0" text="Subject Code" textFill="WHITE" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
@@ -52,7 +72,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Label>
-            <Label layoutX="20.0" layoutY="42.0" text="Descriptive Title" textFill="#0b4e78" GridPane.rowIndex="2">
+            <Label layoutX="20.0" layoutY="42.0" text="Descriptive Title" textFill="WHITE" GridPane.rowIndex="2">
                <font>
                   <Font size="15.0" />
                </font>
@@ -60,24 +80,24 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Label>
-            <Label layoutX="185.0" layoutY="12.0" text=":" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label layoutX="185.0" layoutY="12.0" text=":" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="185.0" layoutY="49.0" text=":" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label layoutX="185.0" layoutY="49.0" text=":" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="4">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="5">
                <children>
-                  <Label text="Lec Units :" textFill="#0b4e78">
+                  <Label text="Lec Units :" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lbl_lec" text="1.0" textFill="#0b4e78">
+                  <Label fx:id="lbl_lec" text="1.0" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -85,7 +105,7 @@
                         <Insets left="5.0" />
                      </HBox.margin>
                   </Label>
-                  <Label layoutX="10.0" layoutY="20.0" text="Lab Units :" textFill="#0b4e78">
+                  <Label layoutX="10.0" layoutY="20.0" text="Lab Units :" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -93,7 +113,7 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="lbl_lab" layoutX="78.0" layoutY="20.0" text="1.0" textFill="#0b4e78">
+                  <Label fx:id="lbl_lab" layoutX="78.0" layoutY="20.0" text="1.0" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -103,9 +123,9 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <children>
-                  <Label prefHeight="21.0" prefWidth="69.0" text="Type :" textFill="#0b4e78">
+                  <Label prefHeight="21.0" prefWidth="69.0" text="Type :" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -115,7 +135,7 @@
                         <Insets left="27.0" />
                      </HBox.margin>
                      <children>
-                        <Label fx:id="lbl_type" text="SAMPLE TYPE" textFill="#0b4e78">
+                        <Label fx:id="lbl_type" text="SAMPLE TYPE" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -124,16 +144,16 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="4" GridPane.rowIndex="2">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="5" GridPane.rowIndex="2">
                <children>
-                  <Label text="Subtype: " textFill="#0b4e78">
+                  <Label text="Subtype: " textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
                   <VBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="210.0">
                      <children>
-                        <Label fx:id="lbl_subtype" text="SAMPLE SUBTYPE" textFill="#0b4e78">
+                        <Label fx:id="lbl_subtype" text="SAMPLE SUBTYPE" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -145,7 +165,7 @@
                   </VBox>
                </children>
             </HBox>
-            <Label layoutX="35.0" layoutY="78.0" text="Subject ID" textFill="#0b4e78">
+            <Label layoutX="35.0" layoutY="78.0" text="Subject ID" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
@@ -153,22 +173,22 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Label>
-            <Label layoutX="174.0" layoutY="219.0" text=":" GridPane.columnIndex="1">
+            <Label layoutX="174.0" layoutY="219.0" text=":" textFill="WHITE" GridPane.columnIndex="1">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_subject_id" layoutX="15.0" layoutY="30.0" text="20" textFill="#0b4e78" GridPane.columnIndex="2">
+            <Label fx:id="lbl_subject_id" layoutX="15.0" layoutY="30.0" text="20" textFill="WHITE" GridPane.columnIndex="2">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_subject_code" layoutX="173.0" layoutY="30.0" text="IT 111" textFill="#0b4e78" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Label fx:id="lbl_subject_code" layoutX="173.0" layoutY="30.0" text="IT 111" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_description" layoutX="173.0" layoutY="78.0" text="SAMPLE DESCRIPTION" textFill="#0b4e78" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Label fx:id="lbl_description" layoutX="173.0" layoutY="78.0" text="SAMPLE DESCRIPTION" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -178,14 +198,14 @@
             <Insets left="5.0" top="10.0" />
          </padding>
          <VBox.margin>
-            <Insets right="20.0" />
+            <Insets left="10.0" right="20.0" />
          </VBox.margin>
       </GridPane>
-      <VBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="808.0" style="-fx-background-color: #2980B9;" VBox.vgrow="ALWAYS">
+      <VBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="808.0" VBox.vgrow="ALWAYS">
          <children>
-            <HBox spacing="5.0">
+            <HBox alignment="CENTER_LEFT" spacing="20.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Label fx:id="lbl_title" prefHeight="28.0" prefWidth="565.0" text="The Pre-requisite(s) and Co-requisite(s) of the subject is/are:" textFill="WHITE">
+                  <Label fx:id="lbl_title" prefHeight="28.0" prefWidth="650.0" text="The Pre-requisite(s) and Co-requisite(s) of the subject is/are:" textFill="WHITE" HBox.hgrow="ALWAYS">
                      <graphic>
                         <ImageView fitHeight="28.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -194,33 +214,37 @@
                         </ImageView>
                      </graphic>
                      <font>
-                        <Font size="13.0" />
+                        <Font size="19.0" />
                      </font>
                   </Label>
-                  <Button fx:id="btn_new_prereq" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="34.0" prefWidth="305.0" style="-fx-background-color: #2ECC71;" text="New Pre-requisite" textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="23.0" fitWidth="27.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/add.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_new_coreq" layoutX="627.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="34.0" prefWidth="284.0" style="-fx-background-color: #56CFAA;" text="New Co-requisite" textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="23.0" fitWidth="27.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/add.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
+                  <HBox alignment="CENTER_RIGHT" spacing="20.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="btn_new_prereq" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="New Pre-requisite" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="23.0" fitWidth="27.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@img/add.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="btn_new_coreq" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="173.0" style="-fx-background-color: #E85764; -fx-border-color: #fff;" text="New Co-requisite" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="23.0" fitWidth="27.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@img/add.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </HBox>
          </children>
@@ -231,21 +255,21 @@
             <Insets left="10.0" right="10.0" />
          </padding>
       </VBox>
-      <VBox fx:id="vbox_subjects" alignment="CENTER" prefHeight="222.0" prefWidth="808.0">
+      <VBox fx:id="vbox_subjects" alignment="CENTER" prefHeight="437.0" prefWidth="808.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css">
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
          </VBox.margin>
          <children>
-            <VBox fx:id="vbox_no_result" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="vbox_no_result" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Label text="No Pre-requisite &amp; Co-requisite Found" textFill="#03a1e9">
+                  <Label text="No Pre-requisite &amp; Co-requisite Found" textFill="WHITE">
                      <font>
                         <Font size="23.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="51.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@img/subjects.png" />
+                              <Image url="@img/subject.png" />
                            </image>
                         </ImageView>
                      </graphic>
